@@ -1,5 +1,6 @@
   * Fix date display in .kdbx entries
   * Support .kdbx format changes in KeePass 2.15
+  * Move dates to the bottom of the entry view
 
 KeePassDroid (1.9.1)
   * Don't default to missing files
